2022-02-06  6.9.12-39  <quetzlzacatenango@image...> 
  * Release ImageMagick version 6.9.12-39 GIT revision 17...

2022-02-06  6.9.12-39  <quetzlzacatenango@image...> 
  * optimize reading of XPM properties.

2022-02-05  6.9.12-38  <quetzlzacatenango@image...> 
  * Release ImageMagick version 6.9.12-38 GIT revision 17024:bbf05a344:20220205

2022-02-02  6.9.12-38  <quetzlzacatenango@image...> 
  * limit recursion when reading the VID image format.
  * improperly resizing memory due to errant check (reference
    https://github.com/ImageMagick/ImageMagick/issues/4807).

2022-01-29  6.9.12-37  <quetzlzacatenango@image...> 
  * Release ImageMagick version 6.9.12-37 GIT revision 17011:4dd4d0df4:20220129

2022-01-29  6.9.12-37  <quetzlzacatenango@image...> 
  * limit colorname length to avoid possible DoS
  * restore MPRI URI in SVG

    https://github.com/ImageMagick/ImageMagick/issues/4771).
2022-01-28  6.9.12-36  <quetzlzacatenango@image...> 
  * Release ImageMagick version 6.9.12-36 GIT revision 17005:bf36be468:20220128

2022-01-21  6.9.12-36  <quetzlzacatenango@image...> 
  * PDF now shows the correct Unicode title (reference
    https://github.com/ImageMagick/ImageMagick/issues/4771).

2022-01-24  6.9.12-36  Dirk Lemstra <dirk@lem.....org>
  * Add missing HEIC version check.

2022-01-21  6.9.12-35  <quetzlzacatenango@image...> 
  * Release ImageMagick version 6.9.12-35 GIT revision 16991:2287dca49:20220121 

2022-01-12  6.9.12-35  <quetzlzacatenango@image...>
  * Perist frame delay when converting APNG to Webp (reference
    https://github.com/ImageMagick/ImageMagick/issues/4704).

2021-12-22  6.9.12-34  <quetzlzacatenango@image...> 
  * Release ImageMagick version 6.9.12-34 GIT revision 16959:c10351c16:20211222

2021-12-22  6.9.12-34  <quetzlzacatenango@image...>
  * possible DoS for certain SVG constructs (reference
    https://github.com/ImageMagick/ImageMagick/issues/4626).

2021-12-18  6.9.12-33  <quetzlzacatenango@image...> 