@@ -3,6 +3,7 @@
 
 2022-02-06  6.9.12-39  <quetzlzacatenango@image...> 
   * optimize reading of XPM properties.
+  * Netscape block must appear immediately after the global color table.
 
 2022-02-05  6.9.12-38  <quetzlzacatenango@image...> 
   * Release ImageMagick version 6.9.12-38 GIT revision 17024:bbf05a344:20220205
